<resources>
    <string name="app_name">Traveler</string>
    <string name="aboutMe">About me</string>
    <string name="name">Name</string>
    <string name="wannapost">Do you want to post something?</string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="What_is_your_occupation">What is your occupation?</string>
    <string name="what_is_your_age">How old are you?</string>
    <string name="done">Done</string>
    <string name="ageText">""</string>
    <string name="login_form_title"> Login</string>
    <string name="login_form_login"> LOGIN</string>
    <string name="login_form_username"> username</string>
    <string name="login_form_password"> password</string>
    <string name="feed">Feed</string>
    <string name="about">User</string>
    <string name="info">Statistics</string>
    <string name="track">Track</string>
    <string name="phone">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_inactivity">SignINActivity</string>
    <string name="register">Register</string>
    <string name="google_maps_key">AIzaSyB1ce3f-b-fFYkIlDjRPPR4o8uvOMPlrRo</string>
    <string name="finish_run">Finish ride</string>
    <string name="start">Start</string>
    <string name="total_distance">Total Distance</string>
    <string name="read_sensors_data">Read sensors data</string>
    <string name="health">Health</string>
    <string name="every_pedal_counts">Every pedal counts</string>
    <string name="_0_c">0°C</string>
    <string name="_0">0%</string>
    <string name="_0km">0km</string>
    <string name="average_speed">Average Speed</string>
    <string name="time">00:00:00:00</string>
    <string name="total_time">Total Time</string>
    <string name="_0km_h">0km/h</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_map">Map</string>
    <string name="activity">Activity</string>
    <string name="travel_diary">The diary of those who travel</string>
    <string name="let_s_go_username">Let\'s go, USERNAME!</string>
    <string name="cancel_track">Cancel Track</string>
    <string name="date">DATE</string>

</resources>