<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.StatisticsActivity">

    <TextView
        android:id="@+id/Health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="315dp"
        android:fontFamily="@font/roboto"
        android:text="@string/health"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/steps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="267dp"
        android:layout_marginBottom="32dp"
        android:text="@string/every_pedal_counts"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Health" />


    <Button
        android:id="@+id/logout"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="111dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#000000"
        android:foregroundTint="#301E1E"
        android:onClick="clickLogout"
        android:text="@string/log_out"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,UsingOnClickInXml" />

    <ScrollView
        android:layout_width="396dp"
        android:layout_height="558dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/steps">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonRead"
                android:layout_width="207dp"
                android:layout_height="63dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="28dp"
                android:backgroundTint="#717380"
                android:text="@string/read_sensors_data"
                app:icon="@android:drawable/ic_dialog_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAverageTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="33dp"
                android:text="@string/_0_c"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/buttonRead" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAverageHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="23dp"
                android:text="@string/_0"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/tvAverageTemperature" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAverageQuality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginTop="23dp"
                android:text="@string/_0"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/tvAverageHumidity" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTotalDistanceInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="268dp"
                android:text="@string/total_distance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonRead" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTotalDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="37dp"
                android:text="@string/_0km"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/tvTotalDistanceInfo"
                app:layout_constraintTop_toBottomOf="@+id/tvAverageQuality" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAverageSpeedInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/average_speed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalTimeInfo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTotalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/time"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/tvTotalTimeInfo"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalDistance" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTotalTimeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                android:text="@string/total_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalDistanceInfo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAverageSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/_0km_h"
                android:textSize="30sp"
                app:layout_constraintStart_toEndOf="@+id/tvAverageSpeedInfo"
                app:layout_constraintTop_toBottomOf="@+id/tvTotalTime" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="411dp"
                android:layout_height="262dp"
                android:layout_marginTop="65dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAverageSpeed"
                tools:ignore="MissingConstraints"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="76dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonRead"
                app:srcCompat="@drawable/temp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="55dp"
                android:layout_height="58dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="5dp"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:srcCompat="@drawable/water" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="64dp"
                android:layout_height="63dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:srcCompat="@drawable/air" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/white"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_navigation"
        tools:layout_editor_absoluteX="-47dp" >
    </com.google.android.material.bottomnavigation.BottomNavigationView>



</androidx.constraintlayout.widget.ConstraintLayout>